sgd/reproduction/playground/objects/SVMXC__Service_Contract__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service Contract documents details of entitlement provided to a customer for products bought. Usually shipped/delivered products are covered for a predefined period through a basic warranty. If customers wish to get coverage for repairs beyond the normal warranty period, they normally purchase extended service contracts. Service contract is interchangeably referred to as a service agreement as well.</description>
    <fields>
        <fullName>SMAX_PS_Activate_Date__c</fullName>
        <label>締結日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_AdminRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>業務担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Applier_Email__c</fullName>
        <label>Applier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approval_DateTime__c</fullName>
        <label>承認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approver_Local_Name__c</fullName>
        <formula>SMAX_PS_Approver__r.SMAX_PS_Local_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Local Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>承認者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Maintenance_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ケース</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_Dept__c</fullName>
        <formula>SVMXC__Contact__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注先担当部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Amount__c</fullName>
        <label>契約金額</label>
        <summarizedField>SVMXC__Service_Contract_Products__c.SVMXC__Line_Price__c</summarizedField>
        <summaryForeignKey>SVMXC__Service_Contract_Products__c.SVMXC__Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Applier_Name__c</fullName>
        <label>Contract Applier Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Condition__c</fullName>
        <label>加入条件</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Id__c</fullName>
        <displayFormat>C-{00000000}</displayFormat>
        <label>契約ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Type__c</fullName>
        <label>契約タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Control_SAP_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMAX_PS_Control_SAP_Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustOrderNo__c</fullName>
        <label>得意先発注番号</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Delivery_Cond_Special__c</fullName>
        <label>引渡条件（特殊）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Delivery_Condition__c</fullName>
        <label>引渡条件</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>サービス報告書のサインをもってお引渡しと致します</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>作業報告書の発送をもってお引渡しと致します</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>部品納品にてお引渡しと致します</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>製品納入にてお引渡しと致します</label>
                </value>
                <value>
                    <fullName>9999</fullName>
                    <label>特殊</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Delivery_Location__c</fullName>
        <label>﻿引渡場所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Delivery_Status__c</fullName>
        <label>納入時獲得</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Display_IP_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>帳票：明細表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Display_IP_Total__c</fullName>
        <defaultValue>true</defaultValue>
        <label>帳票：総合計有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndUserCd__c</fullName>
        <formula>SMAX_PS_EndUser__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザCD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>エンドユーザ</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (エンドユーザ)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Address__c</fullName>
        <formula>SMAX_PS_EndUser__r.BillingPostalCode + &quot; &quot; +
SMAX_PS_EndUser__r.BillingState +
SMAX_PS_EndUser__r.BillingCity +
SMAX_PS_EndUser__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザ住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Cont_Dept__c</fullName>
        <formula>SMAX_PS_End_User_Contact__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザ担当者部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>エンドユーザ担当者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (エンドユーザ担当者)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Percent__c</fullName>
        <label>諸経費パーセント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Expense_Percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Generic_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>汎用契約</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_Contact__c</fullName>
        <label>HOR - 担当者名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_Date__c</fullName>
        <label>HOR - 日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_Number__c</fullName>
        <label>HOR - 号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOR - 営業所</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (HOR - 営業所)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Logged_In_SAP_User__c</fullName>
        <formula>$User.SMAX_PS_SAPLicense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAPライセンス保持者</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Link__c</fullName>
        <label>リンク</label>
        <length>1200</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LostReasonTxt__c</fullName>
        <label>失注理由詳細</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LostReason__c</fullName>
        <label>失注理由</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                    <label>予算</label>
                </value>
                <value>
                    <fullName>DeliveryTimeline</fullName>
                    <label>納期</label>
                </value>
                <value>
                    <fullName>NotThisTime</fullName>
                    <label>見送り</label>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                    <label>他決</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Not_Support_Condition__c</fullName>
        <label>保証外条件</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Number_of_Contract_Months__c</fullName>
        <formula>MONTH( SVMXC__End_Date__c + 1 ) + (12*(YEAR( SVMXC__End_Date__c + 1 )-YEAR( SVMXC__Start_Date__c ))) - MONTH( SVMXC__Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_OutPut_Type__c</fullName>
        <label>帳票様式（HTS/HOR）</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_OutPutType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Overtime_Billing_Condition__c</fullName>
        <label>時間外対応条件</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Owner_Local_Name__c</fullName>
        <formula>Owner:User.SMAX_PS_Local_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Local Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PM_Count__c</fullName>
        <label>点検回数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Billing_Condition__c</fullName>
        <label>部品代条件</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payment_Method__c</fullName>
        <label>請求方法</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payment_Terms__c</fullName>
        <label>支払条件</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Plant__c</fullName>
        <label>プラント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Plant</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>製品</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.SVMXC__Product_Line__c</field>
                <operation>equals</operation>
                <value>製品</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Publish_Date__c</fullName>
        <label>見積発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote_Remarks__c</fullName>
        <label>備考（見積）</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>リモート</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Renewed_End_Date__c</fullName>
        <formula>DATE(YEAR(SMAX_PS_Renewed_start_date__c) + (SMAX_PS_Number_of_Contract_Months__c/12), MONTH(SMAX_PS_Renewed_start_date__c), DAY(SMAX_PS_Renewed_start_date__c)) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>継続終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Renewed_start_date__c</fullName>
        <formula>SVMXC__End_Date__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>継続開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Repair_Billing_Condition__c</fullName>
        <label>修理回数上限</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Report_Name__c</fullName>
        <formula>LEFT(SUBSTITUTE(SUBSTITUTE(TEXT(TODAY()) +TEXT(TIMENOW()), &apos;-&apos;, &apos;&apos;), &apos;:&apos;,&apos;&apos;), 14)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAPContractNo__c</fullName>
        <label>SAP契約伝票No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_IF_Status__c</fullName>
        <label>SAP連携ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Control_SAP_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SAP_IF_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_No_Null_Count__c</fullName>
        <label>SAP契約明細番号NULL明細</label>
        <summaryFilterItems>
            <field>SVMXC__Service_Contract_Products__c.SMAX_PS_SAPContractDetailNo__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Contract_Products__c.SVMXC__Service_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup__c</fullName>
        <label>営業Gr.</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_SAP_SalesOffice__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOffice__c</fullName>
        <label>営業所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOrg__c</fullName>
        <label>販売組織</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Station</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (Service Station)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShiptoCd__c</fullName>
        <formula>SMAX_PS_Shipto__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷先CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Shipto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (出荷先)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Site_NIU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location NIU</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>設置場所</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sold_Date__c</fullName>
        <label>受注日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldtoCd__c</fullName>
        <formula>SVMXC__Company__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注先CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Status__c</fullName>
        <label>状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <label>ドラフト</label>
                </value>
                <value>
                    <fullName>RequestApproval</fullName>
                    <label>承認依頼中</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <label>承認済み</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                    <label>提出済み</label>
                </value>
                <value>
                    <fullName>Sold</fullName>
                    <label>受注済み</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <label>契約中</label>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                    <label>継続済</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <label>契約満了</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <label>解約</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                    <label>失注</label>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                    <label>無効</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tax_Rate__c</fullName>
        <label>帳票：税込み・税抜き</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>税抜き</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>税込み（10%）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tax__c</fullName>
        <formula>IF( ISPICKVAL(SMAX_PS_Tax_Rate__c, &apos;0&apos;),0 , SMAX_PS_Contract_Amount__c / 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>税金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Test_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>サービス契約</relationshipLabel>
        <relationshipName>SMAX_PS_Test_Price_Book</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Valid_Until__c</fullName>
        <label>見積有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Valid_Up_To__c</fullName>
        <label>納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activation_Notes__c</fullName>
        <description>Service/Maintenance Contract Activation Notes</description>
        <inlineHelpText>Service/Maintenance Contract Activation Notes</inlineHelpText>
        <label>Activation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</description>
        <inlineHelpText>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Contacts_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if all contacts from this customer are entitled for support. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag that indicates if all contacts from this customer are entitled for support. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Contacts Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Products_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if this contract covers all products purchased by this customer.</description>
        <inlineHelpText>Flag that indicates if this contract covers all products purchased by this customer.</inlineHelpText>
        <label>All Products Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Services_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if the customer is entitled to all types of services offered. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag that indicates if the customer is entitled to all types of services offered. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Services Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Sites_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if all customer locations are covered by this contract. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag that indicates if all customer locations are covered by this contract. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Sites Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Schedule__c</fullName>
        <description>Indicates the frequency of how the customer prefers to be invoiced for the contract amount</description>
        <inlineHelpText>Indicates the frequency of how the customer prefers to be invoiced for the contract amount</inlineHelpText>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Full Upfront</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Cancelation_Notes__c</fullName>
        <description>Service/Maintenance Contract Cancelation Notes</description>
        <inlineHelpText>Service/Maintenance Contract Cancelation Notes</inlineHelpText>
        <label>Cancelation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the salesforce user  that canceled this service contract</description>
        <inlineHelpText>Name of the salesforce user  that canceled this service contract</inlineHelpText>
        <label>Canceled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001hzcwEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_On__c</fullName>
        <description>Date/time on which this service contract was canceled</description>
        <inlineHelpText>Date/time on which this service contract was canceled</inlineHelpText>
        <label>Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer to whom this service contract is sold. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Customer to whom this service contract is sold. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>R00N70000001hzYIEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact person from the customer account associated with this contract. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the contact person from the customer account associated with this contract. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzcEEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contract_Price2__c</fullName>
        <description>Total price of the service contract before discount</description>
        <inlineHelpText>Total price of the service contract before discount</inlineHelpText>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contract_Price__c</fullName>
        <description>Total price of the service contract before discount</description>
        <inlineHelpText>Total price of the service contract before discount</inlineHelpText>
        <label>Contract Price(DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Counter_Usages_Processed_Until__c</fullName>
        <label>Counter Usages Processed Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not used</description>
        <label>Default Group Member</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service Contracts (Default Group Member)</relationshipLabel>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Parts_Price_Book__c</fullName>
        <description>Default price book to be used when no parts price is defined</description>
        <label>Default Parts Price Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Service_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not used</description>
        <label>Default Service Group</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Travel_Price__c</fullName>
        <label>Default Travel Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Travel_Unit__c</fullName>
        <label>Default Travel Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Tiered Per Mile/Km</fullName>
                </value>
                <value>
                    <fullName>Zone Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Discount__c</fullName>
        <description>Percentage discount to be applied on the contract price</description>
        <inlineHelpText>Percentage discount on the contract price</inlineHelpText>
        <label>Discount%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discounted_Price2__c</fullName>
        <description>Contract Price minus discount. Calculated automatically</description>
        <formula>SVMXC__Contract_Price2__c - (SVMXC__Contract_Price2__c * SVMXC__Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Price minus discount. Calculated automatically</inlineHelpText>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discounted_Price__c</fullName>
        <description>Contract Price minus discount. Calculated automatically</description>
        <inlineHelpText>Contract Price minus discount. Calculated automatically</inlineHelpText>
        <label>Discounted Price(DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date__c</fullName>
        <description>End date of the service contract</description>
        <inlineHelpText>End date of the service contract</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndpointURL__c</fullName>
        <description>Not used</description>
        <formula>$Api.Enterprise_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndpointURL</label>
        <type>Text</type>
    </fields>
</CustomObject>